<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HP LiveShopper</string>
    <string name="metaioSDKSignature">L1lKbcIeVQd1fcuFfWP7W6kIFIDFW2RkKs6eXYGLRlU=</string>
    <string name="title_activity_detail">Product Detail</string>    
    <string name="product_code">Code:</string>
    <string name="product_title">Title:</string>
	<string name="product_price">Price:</string>
	<string name="product_description">Description:</string>
	<string name="product_datasheet">Datasheet PDF</string>
	<string name="product_video">View Video</string>
	<string name="product_buynow">Buy Now</string>
	<string name="product_reseller">Find Reseller</string>	
</resources>
